rocketchat/deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rocketmongo
  namespace: default
spec:
  serviceName: rocketmongo
  replicas: 3
  selector:
    matchLabels:
      app: rocketmongo
  template:
    metadata:
      labels:
        app: rocketmongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: rocketmongo
          image: mongo:5.0
          command:
          - mongod
          - "--bind_ip_all"
          - "--replSet"
          - rs0
          ports:
            - containerPort: 27017
          volumeMounts:
          - name: mongo-volume
            mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
          
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat-server
  template:
    metadata:
      labels:
        app: rocketchat-server
    spec:
      containers:
        - name: rocketchat-server
          image: rocketchat/rocket.chat:4.5.0
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
