rocketchat/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rocketmongo
  namespace: default
  labels:
    app: rocketmongo
spec:
  selector:
    app: rocketmongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None

---

apiVersion: v1
kind: Service
metadata:
  name: rocketchat-server
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: rocketchat-server
  ports:
    - name: http
      port: 80
      targetPort: 3000
