rocketchat/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocketchat
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: rocketchat
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /rocketchat
            pathType: Prefix
            backend:
              service:
                name:  rocketchat-server
                port:
                  number: 3000
